--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -54,7 +54,7 @@ body {
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: url(/assets/gif/robot.gif);
+      background: url(../gif/robot.gif);
       background-size: contain;
       background-position: left center;
       background-repeat: no-repeat;
