--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -77,7 +77,7 @@ body button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: url(/assets/gif/robot.gif);
+  background: url(../gif/robot.gif);
   background-size: contain;
   background-position: left center;
   background-repeat: no-repeat;
